--- a/estilos_servicios.css
+++ b/estilos_servicios.css
@@ -1,54 +1,4 @@
 body{
-	background-image: url(storn.jpg);
-	background-size: cover;
-	background-attachment: fixed;
-	margin: 0;
-}
-form{
-	width: 450px;
-	margin: auto;
-	background: rgba(0,0,0,0.4);
-	padding: 10px 20px;
-	box-sizing: border-box;
-	margin-top: 20px;
-	border-radius: 7px;
-}
-
-h2{
-	color: #fff;
-	text-align: center;
-	margin: 0;
-	font-size: 30px;
-	margin-bottom: 20px;
-}
-
-input, textarea{
-	width: 100%;
-	margin-bottom: 20px;
-	padding: 7px;
-	box-sizing: border-box;
-	font-size: 17px;
-}
-
-textarea{
-	min-height: 100px;
-	max-height: 200px;
-}
-#boton{
-	background: #31384A;
-	color: #fff;
-	padding: 20px;
-}
-#boton:hover{
-	cursor: pointer;
-}
-
-@media (max-width: 480px){
-	form{
-		width: 100%;
-	}
-}
-body{
 	margin: 0;
 	font-family: sans-serif;
 }
@@ -110,7 +60,16 @@ header label:hover{
 	#btn-menu:checked ~ .menu{
 		margin: 0;
 	}
-	form{
-		margin-top: 300px;
-	}
+
+}
+table{
+	border: 1px solid black;
+	width: 70%;
+	height: 400px;
+}
+table tr{
+	border: 1px solid black;
+}
+table tr td{
+	border: 1px solid black;
 }
