--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,10 @@ body{
 	font-family: sans-serif;
 	background-color: black;
 }
+.architecture{
+	width: 100%;
+	height: 560px;
+}
 header{
 	width: 100%;
 	background: #4E94AB;
