--- a/estilos_contacto.css
+++ b/estilos_contacto.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(storn.jpg);
+	background-color: grey;
 	background-size: cover;
 	background-attachment: fixed;
 	margin: 0;
